Added Magic Eraser (Model excluded)
